Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9516

type error when setting session variable

Details

    • 10.1.13

    Description

      The following query fails:

      • SET SESSION wait_timeout = GREATEST(28000, @@wait_timeout)

      Error:
      #1232 - Incorrect argument type to variable 'wait_timeout`

      There should be no type conversion issue as those queries work:

      • SET SESSION wait_timeout = 28000;
      • SET SESSION wait_timeout = @@wait_timeout;
      • SELECT GREATEST(28000, @@wait_timeout);

      please see this SO question for detail:
      http://stackoverflow.com/questions/35187378/mariadb-type-error-when-setting-session-variable

      Attachments

        Activity

          Transition Time In Source Status Execution Times
          Elena Stepanova made transition -
          Open Confirmed
          2d 19h 56m 1
          Alexander Barkov made transition -
          Confirmed In Progress
          43d 18h 32m 1
          Alexander Barkov made transition -
          In Progress In Review
          8s 1
          Sergei Golubchik made transition -
          In Review Stalled
          5h 29m 1
          Alexander Barkov made transition -
          Stalled Closed
          36m 4s 1

          People

            bar Alexander Barkov
            mvo Moritz Vondano
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.