MDEV-9516 type error when setting session variable Allowing assigning of DECIMAL(N,0) values to INT-alike system variables.